--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         "framework"
     ],
     "require": {
-        "php": "^7.3",
+        "php": "^7.4",
         "laminas/laminas-component-installer": "^1.0 || ^2.1",
         "laminas/laminas-development-mode": "^3.2",
         "laminas/laminas-mvc": "^3.1.1",
@@ -20,7 +20,10 @@
         "laminas/laminas-log": "^2.11",
         "laminas/laminas-mvc-i18n": "^1.1.1",
         "laminas/laminas-mvc-plugins": "^1.0.1",
-        "laminas/laminas-di": "^3.1.1"
+        "laminas/laminas-di": "^3.1.1",
+        "propel/propel": "~2.0@dev",
+        "ext-pdo": "*",
+        "ext-json": "*"
     },
     "autoload": {
         "psr-4": {
