--- a/composer.json
+++ b/composer.json
@@ -23,9 +23,13 @@
         "laminas/laminas-di": "^3.1.1",
         "propel/propel": "~2.0@dev",
         "ext-pdo": "*",
-        "ext-json": "*"
+        "ext-json": "*",
+        "ppito/laminas-whoops": "^2.0"
     },
     "autoload": {
+        "classmap": [
+            "Lib/"
+        ],
         "psr-4": {
             "Application\\": "module/Application/src/"
         }
