--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,12 @@
         "framework"
     ],
     "require": {
-        "php": "^7.4",
+        "php": "^8.1",
         "laminas/laminas-component-installer": "^1.0 || ^2.1",
         "laminas/laminas-development-mode": "^3.2",
         "laminas/laminas-mvc": "^3.1.1",
         "laminas/laminas-db": "^2.10.0",
-        "laminas/laminas-mvc-form": "^1.0",
+        "laminas/laminas-mvc-form": "^2.0",
         "laminas/laminas-json": "^3.1.2",
         "laminas/laminas-log": "^2.11",
         "laminas/laminas-mvc-i18n": "^1.1.1",
@@ -53,6 +53,11 @@
         "test": "phpunit"
     },
     "require-dev": {
-        "laminas/laminas-test": "^3.3.0"
+        "laminas/laminas-test": "^4"
+    },
+    "config": {
+        "allow-plugins": {
+            "laminas/laminas-component-installer": true
+        }
     }
 }
